--- a/searchsick.html
+++ b/searchsick.html
@@ -199,10 +199,10 @@
 			
 		<!-- Header -->
 			<header id="header">
-				<h1><a href="homepage.html">Interphase</a></h1>
+				<h1><a href="index.html">Interphase</a></h1>
 				<nav id="nav">
 					<ul>
-						<li><a href="homepage.html" target="_blank">台灣醫療大作戰</a></li>   <!-- 開新的一個視窗---->
+						<li><a href="index.html" target="_blank">台灣醫療大作戰</a></li>   <!-- 開新的一個視窗---->
 						<li><a href="searchsick.html" target="_blank">查詢病狀</a></li>
 						<li><a href="instructions.html" target="_blank">台灣民眾常見慢性病之自體分析</a></li>    
 					</ul>
