--- a/index.html
+++ b/index.html
@@ -41,7 +41,6 @@
 		<!-- Banner -->                         <!-- 第一個畫面 -->   
 			<section id="banner">
 				<h2>台灣醫療大作戰</h2>
-				<p>大學生的10病狀</p>
 				<ul class="actions">
 					<li>
 						<a  id="bu"class="button big">Learn More</a>
@@ -121,6 +120,10 @@
 									<h3>phone</h3>
 									0978716315<br>
 									0909992602
+								</li>
+								<li>
+									<h3>PPT</h3>
+									<a href="" download="台灣醫療大作戰解說.pptx">PPT下載</a>
 								</li>
 							</ul>
 						</section>
