--- a/instructions.html
+++ b/instructions.html
@@ -412,7 +412,7 @@
 								</li>
 								<li>
 									<h3>PPT</h3>
-									<a href="" download="台灣醫療大作戰解說.pptx">PPT下載</a>
+									<a href="台灣醫療大作戰解說.pptx" >PPT下載</a>
 								</li>
 							</ul>
 						</section>
