--- a/searchsick.html
+++ b/searchsick.html
@@ -293,7 +293,7 @@
 								</li>
 								<li>
 									<h3>PPT</h3>
-									<a href="" download="w3logo">PPT下載</a>
+									<a href="台灣醫療大作戰解說.pptx" >PPT下載</a>
 								</li>
 							</ul>
 						</section>
